update chat-service deployment

--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -67,7 +67,7 @@ jobs:
 
     - name: Build and Push Docker Images
       run: |
-        microservices=("frontend")
+        microservices=("chat-service eval-service")
         for service in "${microservices[@]}"
         do
           echo "Building image for $service"
@@ -82,29 +82,32 @@ jobs:
     # "collaboration-service" "editor-service" "history-service" "question-service" 
     - name: Deploy
       run: |
-        # microservices=("")
-        # for service in "${microservices[@]}"
-        # do
-        #   echo "Deploying $service"
-        #   # Set the image repository and tag in the values file
-        #   helm upgrade --install $service ./$service/k8 \
-        #     --set image.repository="$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$service" \
-        #     --set image.tag="$GITHUB_SHA" \
-        #     --values ./$service/k8/$service-values.yaml \
-        #     --wait
-        #   # Check the rollout status
-        #   kubectl rollout status deployment/$service-deployment
-        #   # List the services
-        #   kubectl get services -o wide
-        # done
-        echo "Deploying frontend-service"
-        helm upgrade --install frontend ./frontend/k8 \
-          --set image.repository="$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/frontend" \
-          --set image.tag="$GITHUB_SHA" \
-          --values ./frontend/k8/frontend-values.yaml \
-          --wait
-        kubectl rollout status deployment/frontend-service-deployment
-        kubectl get services -o wide
+        microservices=("chat-service eval-service")
+        for service in "${microservices[@]}"
+        do
+          echo "Deploying $service"
+          # Set the image repository and tag in the values file
+          helm upgrade --install $service ./$service/k8 \
+            --set image.repository="$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$service" \
+            --set image.tag="$GITHUB_SHA" \
+            --values ./$service/k8/$service-values.yaml \
+            --wait
+          # Check the rollout status
+          kubectl rollout status deployment/$service-deployment
+          # List the services
+          kubectl get services -o wide
+        done
+
+        
+        # echo "Deploying frontend-service"
+        # helm upgrade --install frontend ./frontend/k8 \
+        #   --set image.repository="$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/frontend" \
+        #   --set image.tag="$GITHUB_SHA" \
+        #   --values ./frontend/k8/frontend-values.yaml \
+        #   --wait
+        # kubectl rollout status deployment/frontend-service-deployment
+        # kubectl get services -o wide
+      
       shell: bash
 
 # ./kustomize edit set image "$service=$GAR_LOCATION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY/$service:$GITHUB_SHA" 
