--- a/.github/workflows/google.yml
+++ b/.github/workflows/google.yml
@@ -13,8 +13,8 @@
 name: Build and Deploy to GKE
 
 on:
-  push:
-    branches: [ "deployment" ]
+  pull-request:
+    branches: [ "master" ]
 
 env:
   PROJECT_ID: moonlit-order-400013
