fix history service calling dev url of user-service
dynamic change of url during production

--- a/history-service/k8/templates/deployment.yaml
+++ b/history-service/k8/templates/deployment.yaml
@@ -22,3 +22,5 @@ spec:
               value: "{{ .Values.secrets.mongo_url }}"
             - name: JWT_SECRET
               value: "{{ .Values.secrets.jwt_secret }}"
+            - name: NODE_ENV
+              value: "production"
